# Verschenken-Finder

./: .gitignore  README.md  docker-compose.yml  dockerfile  main.py  makefile  pyproject.toml  requirements.txt  states.json
API/: main.py
API/app/core/: db.py  security.py
API/app/models/: __init__.py  offer.py  response_schema.py
API/app/routers/: offer.py
API/app/scraper/: __init__.py  constants.py  scraping.py  utils.py
API/app/scraper/utils/: parse_data.py  time_formater.py
API/tests/: test_scraper.py
Telegram-Bot/bot/src/: main.py
bot/: main.py  requirements.txt
bot/core/: celery_client.py  constants.py  mongo_client.py  redis_client.py
bot/handlers/: __init__.py  debug_handler.py  results_handler.py  start_handlers.py  state_handler.py
bot/models/: offer.py
bot/tests/: test_scraper.py  test_worker.py
bot/utils/: __init__.py  format_prefs.py  object_creator.py  offer_sender.py  parse_data.py  preference_id_format.py  scraper.py  seed_maker.py  time_formater.py
bot/workers/: offer_finder.py  offers_tasks.py
core/: celery_client.py  constants.py  mongo_client.py  redis_client.py
handlers/: __init__.py  back_handler.py  cancel_handler.py  category_handler.py  choosing_handler.py  city_handler.py  debug_handler.py  error_handler.py  preferences_handler.py  price_range_handler.py  results_handler.py  start_handlers.py  state_handler.py  sub_category_handler.py
models/: offer.py
tests/: test_scraper.py  test_worker.py
utils/: format_prefs.py  offer_sender.py  scraper.py  seed_maker.py  time_formater.py
workers/: offers_tasks.py
(+25 files in other folders)
