[tool.poetry]
name = "verschenken-finder"
version = "0.1.0"
description = "This app wil find Verschenken Offers in the Kleineanzeigen website."
authors = ["Lee <as.alisayyadi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.9"
beautifulsoup4 = "^4.12.3"
pymongo = "4.9.0"
requests = "^2.32.3"
pytest = "^8.3.4"
motor = "^3.6.0"
pydantic = "^2.10.4"
redis = "^5.2.1"
celery = "^5.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[tool.pytest.ini_options]
pythonpath = [
".", "src", "src.*", "bot"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

package-mode = false